# cpdb-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
cpdb-sys/: Cargo.toml  LICENSE  README.md  build.rs
cpdb-sys/include/: wrapper.h
cpdb-sys/src/: bindings.rs  callbacks.rs  common.rs  error.rs  frontend.rs  lib.rs  options.rs  printer.rs  settings.rs  util.rs
examples/: discover_printers.rs  ffi_basic_usage.rs  ffi_cli_printer_manager.rs  filter_printers.rs  get_translations.rs  print_a_document.rs
src/: client.rs  config.rs  error.rs  events.rs  lib.rs  media.rs  options.rs  proxy.rs  types.rs
src/ffi/: backend.rs  bindings.rs  common.rs  frontend.rs  job.rs  mod.rs  printer.rs  settings.rs  util.rs
tests/: integration.rs  unit_tests.rs
