[package]
name = "cpdb-rs"
version = "0.1.0"
edition = "2024"
description = "Safe Rust bindings for OpenPrinting cpdb-libs — Common Print Dialog Backends"
license = "MIT"
keywords = ["printing", "cups", "openprinting", "ffi", "cpdb"]
categories = ["api-bindings", "os::unix-apis"]
readme = "README.md"
rust-version = "1.85"
build = "build.rs"

[dependencies]
libc = { version = "0.2", optional = true }
thiserror = "2.0"
log = "0.4"
crossbeam-channel = "0.5"
glib-sys = { version = "0.22", optional = true }
serde = { version = "1.0", features = ["derive"] }
zbus = { version = "5.15.0", default-features = false, features = [
    "tokio",
], optional = true }
futures-util = "0.3"

[build-dependencies]
bindgen = { version = "0.72", optional = true }
pkg-config = { version = "0.3", optional = true }

[features]
default = ["zbus-backend"]
ffi = ["dep:libc", "dep:glib-sys", "dep:bindgen", "dep:pkg-config"]
zbus-backend = ["dep:zbus"]
frontend = []
backend = []

[dev-dependencies]
tempfile = "3.10"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
required-features = ["ffi"]

[[example]]
name = "cli_printer_manager"
path = "examples/cli_printer_manager.rs"
required-features = ["ffi"]

[[example]]
name = "cpdb-text-frontend"
path = "examples/cpdb-text-frontend.rs"
required-features = ["ffi"]
