[package]
name = "cpdb-rs"
version = "0.1.0"
edition = "2024"
description = "Safe Rust bindings for OpenPrinting cpdb-libs — Common Print Dialog Backends"
license = "MIT"
keywords = ["printing", "cups", "openprinting", "ffi", "cpdb"]
categories = ["api-bindings", "os::unix-apis"]
readme = "README.md"
repository = "https://github.com/OpenPrinting/cpdb-rs"
homepage = "https://openprinting.github.io/"
documentation = "https://docs.rs/cpdb-rs"
rust-version = "1.85"
build = "build.rs"
links = "cpdb"
# Internal project docs and CI config aren't useful to consumers and just bloat
# the .crate tarball. include/wrapper.h MUST stay in the package — build.rs
# feeds it to bindgen at the consumer's build time.
exclude = [
    ".github/",
    "PRODUCTION_READINESS.md",
    "RELEASE_GOVERNANCE.md",
    "PUBLISHING.md",
    "deny.toml",
    "rustfmt.toml",
    ".gitignore",
]

[package.metadata.docs.rs]
all-features = false
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
thiserror = "2.0"
log = "0.4"
glib-sys = "0.22"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3.27"
