[package]
name = "cpdb-sys"
version = "0.1.0"
edition = "2024"
description = "FFI bindings for cpdb-libs"
license = "MIT"
keywords = ["printing", "cups", "openprinting", "ffi", "cpdb"]
categories = ["api-bindings", "external-ffi-bindings", "os::unix-apis"]
readme = "README.md"
repository = "https://github.com/OpenPrinting/cpdb-rs"
rust-version = "1.85"
build = "build.rs"
links = "cpdb"

[dependencies]
libc = "0.2"
glib-sys = "0.22"
thiserror = "2.0"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
