[package]
name = "cpdb-sys"
version = "0.1.1"
edition = "2024"
description = "Low-level FFI bindings for OpenPrinting cpdb-libs (Common Print Dialog Backends). See cpdb-rs for the high-level API."
license = "MIT"
keywords = ["printing", "cups", "openprinting", "ffi", "cpdb"]
categories = ["api-bindings", "external-ffi-bindings", "os::unix-apis"]
readme = "README.md"
homepage = "https://openprinting.github.io/"
documentation = "https://docs.rs/cpdb-sys"
repository = "https://github.com/OpenPrinting/cpdb-rs"
rust-version = "1.85"
build = "build.rs"
links = "cpdb"

[package.metadata.docs.rs]
all-features = false
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
glib-sys = "0.22"
thiserror = "2.0"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
